--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,52 @@
 version: '3.8'
 
 services:
-  web:
-    image: nginx:latest
+
+  nginx-app:
+    image: nginx:stable
+    container_name: con-nginx
+    volumes:
+      - '/opt/web/html:/var/www/html'
+    environment:
+      - 'NGINX_HOST=web.andyrey.io'
+      - 'NGINX_PORT=80'
     ports:
       - "80:80"
-    volumes:
-      - ./html:/usr/share/nginx/html
-    depends_on:
-      - db
+      - "443:443"
+    restart: unless-stopped
+    networks:
+      - net-app
 
-  php:
-    image: php:fpm
-    volumes:
-      - ./html:/var/www/html
-
-  db:
-    image: mysql:latest
+  mysql-db:
+    image: mysql:8.0
+    container_name: con-mysql
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 123456789
-      YSQL_DATABASE: baza
-      MYSQL_USER: robot
-      MYSQL_PASSWORD: 987654321
+      MYSQL_DATABASE: exampledb
+      MYSQL_USER: exampleuser
+      MYSQL_PASSWORD: examplepass
+      MYSQL_ROOT_PASSWORD: '1234567#'
     volumes:
-      - db_data:/var/lib/mysql
+      - db:/var/lib/mysql
+    networks:
+      - net-app
+
+  php-app:
+    image: php:fpm
+    container_name: con-php
+    ports:
+      - '80:80'
+    restart: unless-stopped
+    depends_on:
+      - nginx-app
+      - mysql-db
+    networks:
+      - net-app
 
 volumes:
-  db_data: {}
+  db:
+
+networks:
+  net-app:
+    name: net-app
+    driver: bridge
